src/css/index.css
html, body {
    margin: 0;
    padding: 0;
}

/* Header section of Oldagram */
header{
    display: flex;
    margin: 0 auto;

    justify-content: center;
    gap: 195px;

    padding: 16px 0px 0px 5px;

    height: 67px;
    border-bottom: 1px solid #c6c6c6;
}

#oldagram-logo{
    width: 127px;
    height: 50px;
    margin: 0px;
    padding-right: 10px;

}

#avatar-logo{
    width: 33px;
    height: 33px;
    border-radius: 50%;
    margin: 0px;
    padding-top: 5px;
}

/* User profile section */
.user-profile-top{
    display: flex;
    width: 375px;
    display: row;

    padding-top: 10px;
    padding-left: 5px;
    padding-bottom: 10px;;
    
}

.user-avatar{
    width: 34px;
    height: 34px;
    border-radius: 50%;
}

.user-real-details{
    width: 307px;
    height: 32px;
    color: #000;
    font-family: "Source Sans Pro";
    font-style: normal;
    padding-left: 10px;
    padding-top: 3px;
}

.user-real-details > h2{
    font-size: 13px;
    font-weight: 700;
    margin: 0px;
}

.user-real-details > h3{
    font-size: 12px;
    font-weight: 400;
    margin: 0
}

/* User's photo */
.user-post-photo{
    width: 375px;
    height: 375px;
}

/* User engagements (Likes, Comments, DM)*/

.user-engagements{
    display: flex;
    display: row;

    gap: 5px;

    width: 104px;

    padding-left: 5px;
    padding-top: 12px;
}

.user-engagements > img{
    width: 20px;
}

/* Number of likes on the user's post */
.user-likes{
    width: 343px;
    font-size: 13px;
    font-family: "Source Sans Pro";
    font-style: normal;
    font-weight: 700;
    padding-left: 5px;
}

/* User's account name and comment*/
.user-account-details{
    display: flex;
    flex-direction: row;
    gap: 5px;
    width: 343px;
    font-family: "Source Sans Pro";
    font-size: 11px;
    font-style: normal;
    padding-left: 5px;
    padding-bottom: 16px;
    margin: 0px;
}

.user-account-details > h3{
    font-weight: 700;
    margin: 0px;
    padding: 0px;
}

.user-account-details > p{
    font-weight: 400;
    margin: 0px;
    padding: 0px;
}

/* Footer area */
footer{
    width: 375px;
    height: 20px;
    background: #ededed;
}

